fix image size on small screens in sticky images page, fix links to home

--- a/ui/sticky_with_enter_view/main.css
+++ b/ui/sticky_with_enter_view/main.css
@@ -34,7 +34,7 @@ p {
 }
 
 img {
-  width: 200px;
+  max-width: 200px;
   position: sticky;
   position: -webkit-sticky;
   top: 20px;
